Criação da parte de Javascript...

--- a/public/index.html
+++ b/public/index.html
@@ -14,12 +14,12 @@
       <img src="./images/base set pack.png">
     </div>
     <div id="pokemon-cards-opened">
-      <div class="pokemon-card">
+     <!-- <div class="pokemon-card">
         <img id="0" src="./images/base set (10).jpg">
       </div>
       <div class="pokemon-card"></div>
         <img id="1" src="./images/base set (10).jpg">
-      </div>
+      </div> -->
     </div>
   
   </body>
